--- a/services/booking-service/package.json
+++ b/services/booking-service/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "http-status-code": "^2.1.0",
+    "http-status-codes": "^2.3.0",
     "mysql2": "^3.14.4",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
