--- a/services/booking-service/package.json
+++ b/services/booking-service/package.json
@@ -9,6 +9,7 @@
   "author": "Shivam",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.11.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
