--- a/services/notification-service/package.json
+++ b/services/notification-service/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.9",
+    "cron": "^4.3.3",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
